syntax = "proto3";

package types;
option go_package = "github.com/preslavmihaylov/go-grpc-crash-course/gen/common";

message User {
  string id = 1;
}

message Payment{
  User user = 1;
  int32 amount = 2;
}

message PaymentStatement {
  string data = 1;
}
